[package]
name = "codeql_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-sdk-rs = "1.0.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0.17"
